enh(ui): update UI

--- a/src/_theme/layouts/full/full.component.html
+++ b/src/_theme/layouts/full/full.component.html
@@ -26,11 +26,11 @@
     <!-- VerticalHeader -->
     <!-- ============================================================== -->
 
-    <app-header
+    <app-template-header
       [showToggle]="!isOver"
       (toggleCollapsed)="toggleCollapsed()"
       (toggleMobileNav)="sidenav.toggle()"
-    ></app-header>
+    ></app-template-header>
 
     <main class="pageWrapper">
       <!-- ============================================================== -->
