--- a/src/_theme/layouts/full/sidebar/sidebar.component.html
+++ b/src/_theme/layouts/full/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <div class="flex-layout">
-  <app-branding></app-branding>
+<!--  <app-branding></app-branding>-->
   <mat-nav-list class="sidebar-list">
     <app-nav-item *ngFor="let item of navItems" [item]="item"> </app-nav-item>
   </mat-nav-list>
@@ -20,7 +20,7 @@
         </a>
       </div>
       <img
-        src="/assets/images/backgrounds/rocket.png"
+        src="/src/assets/images/backgrounds/rocket.png"
         alt="imgae"
         class="side-img"
       />
