--- a/src/app/pages/authentication/register/register.component.html
+++ b/src/app/pages/authentication/register/register.component.html
@@ -6,84 +6,35 @@
       <mat-card class="cardWithShadow boxed-auth">
         <mat-card-content class="p-32">
           <div class="text-center">
-            <a [routerLink]="['/dashboard']">
-              <img
-                src="./assets/images/logos/dark-logo.svg"
-                class="align-middle m-2"
-                alt="logo"
-              />
-            </a>
+            <img src="assets/favicon_io/heart.svg" class="align-middle m-2" alt="logo"
+                 [ngStyle]="{width: '90px', height: '100px'}"/>
           </div>
 
-          <div class="row m-t-24 custom-row">
-            <div class="col-12 col-sm-6">
-              <button mat-stroked-button class="w-100">
-                <div class="d-flex align-items-center">
-                  <img
-                    src="/assets/images/svgs/google-icon.svg"
-                    alt="google"
-                    width="16"
-                    class="m-r-8"
-                  />
-                  Sign in with Google
-                </div>
-              </button>
-            </div>
-            <div class="col-12 col-sm-6">
-              <button
-                mat-stroked-button
-                class="w-100 d-flex align-items-center"
-              >
-                <div class="d-flex align-items-center">
-                  <img
-                    src="/assets/images/svgs/facebook-icon.svg"
-                    alt="facebook"
-                    width="40"
-                    class="m-r-4"
-                  />
-                  Sign in with FB
-                </div>
-              </button>
-            </div>
-          </div>
+          <div class="or-border m-t-30">sign up</div>
 
-          <div class="or-border m-t-30">or sign up with</div>
-
-          <form class="m-t-30">
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
-              >Name</mat-label
-            >
+          <form class="m-t-30" [formGroup]="registerForm">
+<!--            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">First Name</mat-label>-->
+<!--            <mat-form-field appearance="outline" class="w-100" color="primary">-->
+<!--              <input matInput [formControlName]="'firstName'"/>-->
+<!--            </mat-form-field>-->
+<!--            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Last Name</mat-label>-->
+<!--            <mat-form-field appearance="outline" class="w-100" color="primary">-->
+<!--              <input matInput [formControlName]="'lastName'"/>-->
+<!--            </mat-form-field>-->
+            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Email Address</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput />
+              <input matInput type="email" [formControlName]="'email'"/>
             </mat-form-field>
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
-              >Email Adddress</mat-label
-            >
+            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">Password</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="email" />
-            </mat-form-field>
-            <!-- password -->
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block"
-              >Password</mat-label
-            >
-            <mat-form-field appearance="outline" class="w-100" color="primary">
-              <input matInput type="password" />
+              <input matInput type="password" [formControlName]="'password'"/>
             </mat-form-field>
 
-            <a [routerLink]="['/']" mat-flat-button color="primary" class="w-100">
-              Sign Up
-            </a>
+            <a (click)="register()" [disabled]="registerForm.invalid" mat-flat-button color="primary" class="w-100">Sign Up</a>
             <!-- input -->
           </form>
-          <span class="d-block f-w-500 text-center m-t-24"
-            >Already have an Account?
-
-            <a
-              [routerLink]="['/authentication/login']"
-              class="text-decoration-none text-primary f-w-500 f-s-14"
-            >
-              Sign In</a
-            >
+          <span class="d-block f-w-500 text-center m-t-24">Already have an Account?
+            <a [routerLink]="['/authentication/login']"  class="text-decoration-none text-primary f-w-500 f-s-14"> Sign In</a>
           </span>
         </mat-card-content>
       </mat-card>
