--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,15 @@
 <div class="row">
-
-  <div class="col-lg-4">
+  <div class="col-lg-4 p-20">
     <app-testimonial-card></app-testimonial-card>
+    <div class="d-flex align-items-center justify-content-between">
+      <h3 class="text-primary text-decoration-none">Notifications</h3>
+      <span>{{localDate| date: 'mediumDate' }}</span>
+    </div>
+    <app-common-card>
+      <h3 class="common-card-title">Kognum</h3>
+<!--      <spa>100mg</spa>-->
+    </app-common-card>
+  </div>
+  <div class="col-lg-8">
   </div>
 </div>
