--- a/src/app/reusable/common-card/common-card.component.html
+++ b/src/app/reusable/common-card/common-card.component.html
@@ -1,59 +1,57 @@
 <!--<div class="col-lg-12 col-sm-6">-->
-  <mat-card class="cardWithShadow">
-    <mat-card-content class="p-24">
-      <mat-card-title>
-        <div class="d-flex align-items-center m-l-16">
-          <i-tabler name="circle-filled" class="text-primary icon-12 d-flex"></i-tabler>
-          <div class="mat-body-1 m-l-12">
-            <ng-content select=".common-card-title"></ng-content>
-          </div>
-        </div>
-      </mat-card-title>
-      <div class="row m-t-24">
-        <div class="col-7">
-          <h4 class="mat-headline-5">$36,358</h4>
-          <div class="d-flex align-items-center m-t-16">
-            <button
-              mat-mini-fab
-              class="bg-light-success text-success shadow-none icon-27"
-            >
-              <i-tabler name="arrow-up-right" class="icon-20"></i-tabler>
-            </button>
-            <div class="mat-body-1 f-w-600 m-l-12">+9%</div>
-            <div class="mat-body-1 m-l-4">last year</div>
-          </div>
+<mat-card class="cardWithShadow">
+  <mat-card-content class="p-24">
+    <mat-card-title>
+      <ng-content select=".common-card-title">
+      </ng-content>
+    </mat-card-title>
+    <!--      <div class="row m-t-24">-->
+    <ng-content select=".common-card-body">
+    </ng-content>
+    <!--        <div class="col-7">-->
+    <!--          <h4 class="mat-headline-5">$36,358</h4>-->
+    <!--          <div class="d-flex align-items-center m-t-16">-->
+    <!--            <button-->
+    <!--              mat-mini-fab-->
+    <!--              class="bg-light-success text-success shadow-none icon-27"-->
+    <!--            >-->
+    <!--              <i-tabler name="arrow-up-right" class="icon-20"></i-tabler>-->
+    <!--            </button>-->
+    <!--            <div class="mat-body-1 f-w-600 m-l-12">+9%</div>-->
+    <!--            <div class="mat-body-1 m-l-4">last year</div>-->
+    <!--          </div>-->
 
-          <div class="d-flex align-items-center m-t-32">
-            <div class="d-flex align-items-center">
-              <i-tabler
-                name="circle-filled"
-                class="text-primary icon-12 d-flex"
-              ></i-tabler>
-              <div class="mat-body-1 m-l-12">2023</div>
-            </div>
-            <div class="d-flex align-items-center m-l-16">
-              <i-tabler
-                name="circle-filled"
-                class="text-light-primary icon-12 d-flex"
-              ></i-tabler>
-              <div class="mat-body-1 m-l-12">2022</div>
-            </div>
-          </div>
-        </div>
-        <div class="col-5 d-flex align-items-start">
-<!--          <apx-chart-->
-<!--            [series]="yearlyChart.series"-->
-<!--            [dataLabels]="yearlyChart.dataLabels"-->
-<!--            [chart]="yearlyChart.chart"-->
-<!--            [legend]="yearlyChart.legend"-->
-<!--            [colors]="yearlyChart.colors"-->
-<!--            [stroke]="yearlyChart.stroke"-->
-<!--            [tooltip]="yearlyChart.tooltip"-->
-<!--            [plotOptions]="yearlyChart.plotOptions"-->
-<!--            [responsive]="yearlyChart.responsive"-->
-<!--          ></apx-chart>-->
-        </div>
-      </div>
-    </mat-card-content>
-  </mat-card>
+    <!--          <div class="d-flex align-items-center m-t-32">-->
+    <!--            <div class="d-flex align-items-center">-->
+    <!--              <i-tabler-->
+    <!--                name="circle-filled"-->
+    <!--                class="text-primary icon-12 d-flex"-->
+    <!--              ></i-tabler>-->
+    <!--              <div class="mat-body-1 m-l-12">2023</div>-->
+    <!--            </div>-->
+    <!--            <div class="d-flex align-items-center m-l-16">-->
+    <!--              <i-tabler-->
+    <!--                name="circle-filled"-->
+    <!--                class="text-light-primary icon-12 d-flex"-->
+    <!--              ></i-tabler>-->
+    <!--              <div class="mat-body-1 m-l-12">2022</div>-->
+    <!--            </div>-->
+    <!--          </div>-->
+    <!--        </div>-->
+    <!--        <div class="col-5 d-flex align-items-start">-->
+    <!--&lt;!&ndash;          <apx-chart&ndash;&gt;-->
+    <!--&lt;!&ndash;            [series]="yearlyChart.series"&ndash;&gt;-->
+    <!--&lt;!&ndash;            [dataLabels]="yearlyChart.dataLabels"&ndash;&gt;-->
+    <!--&lt;!&ndash;            [chart]="yearlyChart.chart"&ndash;&gt;-->
+    <!--&lt;!&ndash;            [legend]="yearlyChart.legend"&ndash;&gt;-->
+    <!--&lt;!&ndash;            [colors]="yearlyChart.colors"&ndash;&gt;-->
+    <!--&lt;!&ndash;            [stroke]="yearlyChart.stroke"&ndash;&gt;-->
+    <!--&lt;!&ndash;            [tooltip]="yearlyChart.tooltip"&ndash;&gt;-->
+    <!--&lt;!&ndash;            [plotOptions]="yearlyChart.plotOptions"&ndash;&gt;-->
+    <!--&lt;!&ndash;            [responsive]="yearlyChart.responsive"&ndash;&gt;-->
+    <!--&lt;!&ndash;          ></apx-chart>&ndash;&gt;-->
+    <!--        </div>-->
+    <!--      </div>-->
+  </mat-card-content>
+</mat-card>
 <!--</div>-->
