--- a/src/app/layouts/sidebar/nav-item/nav-item.component.html
+++ b/src/app/layouts/sidebar/nav-item/nav-item.component.html
@@ -17,5 +17,5 @@
     name="{{ item.iconName }}"
     matListItemIcon
   ></i-tabler>
-  <span class="hide-menu">{{ item.displayName }}</span>
+  <span class="hide-menu">{{ item.displayName | translate}}</span>
 </a>
