--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,7 @@
 <div class="row">
-
+  <div class="col-lg-4 p-20">
+    <app-health-summary></app-health-summary>
+  </div>
   <div class="col-lg-8">
   </div>
 </div>
