enh(ui): update UI

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -3,5 +3,8 @@
     <app-health-summary></app-health-summary>
   </div>
   <div class="col-lg-8">
+<!--     <button mat-icon-button aria-label="user" (click)="addUser()">-->
+<!--    <i-tabler class="d-flex" name="circle-plus"></i-tabler>-->
+<!--  </button>-->
   </div>
 </div>
