--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,10 +1,3 @@
-<div class="row">
-  <div class="col-lg-4 p-20">
-    <app-health-summary></app-health-summary>
-  </div>
-  <div class="col-lg-8">
-<!--     <button mat-icon-button aria-label="user" (click)="addUser()">-->
-<!--    <i-tabler class="d-flex" name="circle-plus"></i-tabler>-->
-<!--  </button>-->
-  </div>
-</div>
+<ng-template appDynamicDashboardComponent></ng-template>
+
+
