--- a/src/app/pages/user/user-profile/user-profile-card/user-profile-card.component.html
+++ b/src/app/pages/user/user-profile/user-profile-card/user-profile-card.component.html
@@ -1,31 +1,34 @@
-<mat-card class="cardWithShadow">
+<mat-card class="cardWithShadow" *ngIf="userProfile$ | async as userProfile">
   <mat-card-content class="p-24">
     <mat-card-title class="d-flex flex-column align-items-center justify-content-center">
+<!--      TODO fix image-->
       <ng-container>
         <img
-          [src]="'assets/favicon_io/heart.svg'"
+          [ngSrc]="'assets/favicon_io/heart.svg'"
           alt="user"
           width="40"
+          height="40"
           class="rounded-circle"
+          priority
         />
       </ng-container>
     </mat-card-title>
     <div class="row m-t-24">
       <div class="col-12 d-flex flex-column align-items-center justify-content-center">
-        <h4 class="mat-headline-5">{{'mariana butnari' | titlecase}}</h4>
-        <h6 class="mat-subtitle-2">{{'25 years, california' | titlecase}}</h6>
+        <h4 class="mat-headline-5">{{ userProfile.firstName | titlecase}}</h4>
+        <h6 class="mat-subtitle-2">{{userProfile.lastName | titlecase}}, {{userProfile.birthDate}}</h6>
         <div class="d-flex align-items-center m-t-32">
           <div class="d-flex flex-column align-items-center justify-content-center">
-            <div class="text-primary text-decoration-none mat-body-1 m-l-12">Blood</div>
-            <div class="mat-body-1 m-l-12">2023</div>
+            <div class="text-primary text-decoration-none mat-body-1 m-l-12">{{'PROFILE.USER_DATA.BLOOD' | translate}}</div>
+            <div class="mat-body-1 m-l-12">{{userProfile.blood}}</div>
           </div>
           <div class="d-flex flex-column align-items-center justify-content-center m-l-16">
-            <div class="text-primary text-decoration-none mat-body-1 m-l-12">Height</div>
-            <div class="mat-body-1 m-l-12">2022</div>
+            <div class="text-primary text-decoration-none mat-body-1 m-l-12">{{'PROFILE.USER_DATA.HEIGHT' | translate}}</div>
+            <div class="mat-body-1 m-l-12">{{userProfile.height}}</div>
           </div>
           <div class="d-flex flex-column align-items-center justify-content-center m-l-16">
-            <div class="text-primary text-decoration-none mat-body-1 m-l-12">Weight</div>
-            <div class="mat-body-1 m-l-12">2022</div>
+            <div class="text-primary text-decoration-none mat-body-1 m-l-12">{{'PROFILE.USER_DATA.WEIGHT' | translate}}</div>
+            <div class="mat-body-1 m-l-12">{{userProfile.weight}}</div>
           </div>
         </div>
       </div>
