enh(ui): add swimlane table and ng-bootstrap

--- a/src/app/pages/user/health-summary/health-summary.component.html
+++ b/src/app/pages/user/health-summary/health-summary.component.html
@@ -3,51 +3,4 @@
   <h3 class="text-primary text-decoration-none">Notifications</h3>
   <span>{{localDate| date: 'mediumDate' }}</span>
 </div>
-<app-common-card>
-  <!--      CARD HEADER-->
-  <div class="common-card-title">
-    <div class="d-flex align-items-center justify-content-between">
-      <div class="d-flex align-items-center">
-        <i-tabler name="circle-filled" class="text-primary icon-12 d-flex"></i-tabler>
-        <h3 class="mat-headline-5 m-l-12">Kognum</h3>
-      </div>
-      <span>100mg</span>
-    </div>
-    <div class="d-flex align-items-center justify-content-start m-t-24">
-      <!--          TODO this will come from api, , if first element there is no margin to the left-->
-      <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12">{{'mon' | uppercase}}</span>
-      <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12 m-l-12">{{'wed' | uppercase}}</span>
-      <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12 m-l-12">{{'fri' | uppercase}}</span>
-      <span class="bg-light-accent text-accent rounded f-w-600 p-6 p-y-4 f-s-12 m-l-12">{{'sun' | uppercase}}</span>
-    </div>
-    <div>
-      <h5>2 times in a day before food</h5>
-    </div>
-  </div>
-  <!--      CARD BODY-->
-  <div class="common-card-body">
-    <div class="d-flex flex-column m-t-24">
-      <div class="d-flex align-items-center">
-        <img [src]="'assets/images/profile/user-1.jpg'" alt="users" width="40" class="rounded-circle"/>
-        <div class="m-l-16">
-          <h6 class="mat-subtitle-1 f-s-14 f-w-600">{{'doc name' | titlecase}}</h6>
-          <span class="mat-body-1 f-s-12">{{'hospital name, where doc works'}}</span>
-        </div>
-      </div>
-      <div class="d-flex flex-column m-t-24">
-        <h6 class="mat-subtitle-1 f-s-14 f-w-600">{{'doc specialisation' | titlecase}}</h6>
-        <span class="mat-body-1 f-s-12">{{'what hurts'}}</span>
-      </div>
-      <div class="d-flex align-items-center justify-content-between m-t-32">
-        <div class="d-flex flex-column align-items-center justify-content-center">
-          <div class="text-primary text-decoration-none mat-body-1 m-l-12">Date</div>
-          <div class="mat-body-1 m-l-12">29 Aug 2023</div>
-        </div>
-        <div class="d-flex flex-column align-items-center justify-content-center m-l-16">
-          <div class="text-primary text-decoration-none mat-body-1 m-l-12">Time</div>
-          <div class="mat-body-1 m-l-12">12:45 AM</div>
-        </div>
-      </div>
-    </div>
-  </div>
-</app-common-card>
+<app-med-notification-card></app-med-notification-card>
