enh(ui): add pagination

--- a/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,5 @@
+<!--<app-common-card>-->
+<!--  <div class="common-card-body">-->
 <app-data-table></app-data-table>
+<!--  </div>-->
+<!--</app-common-card>-->
