--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,5 +6,6 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+$primary: #5d87ff;
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
