enh(ui): use union type instead of enums

--- a/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,5 @@
 <!--<app-common-card>-->
 <!--  <div class="common-card-body">-->
-<app-data-table></app-data-table>
+<app-data-table [dataTableConfiguration]="docsTabConfig"></app-data-table>
 <!--  </div>-->
 <!--</app-common-card>-->
