--- a/src/app/pages/authentication/login/login.component.html
+++ b/src/app/pages/authentication/login/login.component.html
@@ -8,7 +8,7 @@
                  [ngStyle]="{width: '90px', height: '100px'}"/>
           </div>
           <form class="m-t-30" [formGroup]="loginForm">
-            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">{{'USER.NAME' | translate}}</mat-label>
+            <mat-label class="mat-subtitle-2 f-s-14 f-w-600 m-b-12 d-block">{{'USER.USER_NAME' | translate}}</mat-label>
             <mat-form-field appearance="outline" class="w-100" color="primary">
               <input matInput [formControlName]="'email'"/>
             </mat-form-field>
