enh(ui): some improvements

--- a/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/dashboard/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,5 @@
-<!--<app-common-card>-->
-<!--  <div class="common-card-body">-->
-<app-data-table [dataTableConfiguration]="docsTabConfig"></app-data-table>
-<!--  </div>-->
-<!--</app-common-card>-->
+<app-common-card>
+  <div class="common-card-body">
+
+  </div>
+</app-common-card>
